security_group.tf
resource "aws_security_group" "seljenkins-sg" {
    vpc_id = aws_vpc.seljenkins-vpc.id
    name        = "test-sg"
    description = "security group for EC2"

    ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Open SSH access from anywhere
    }

    ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Open http access 
    }


    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # Allow all outbound traffic
    cidr_blocks = ["0.0.0.0/0"]
    }
}
